src/objects/E_Consent__c.object
<CustomObject>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>click_Applicant__c</referenceTo>
        <relationshipLabel>E-Consent</relationshipLabel>
        <relationshipName>E_Consent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_uuid__c</fullName>
        <formula>Applicant__r.Lendi_User_uuid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant uuid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_IP__c</fullName>
        <label>Consent IP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Method__c</fullName>
        <description>SMS or Dashboard</description>
        <label>Consent Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Time_and_Date__c</fullName>
        <label>Consent Time and Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Econsent_Type__c</fullName>
        <label>Econsent Type</label>
        <picklist>
            <picklistValues>
                <fullName>General Econsent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Specific Econsent</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>E-Consent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>E-Consent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E-Consent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>